k8s/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: mopd-chat
        image: gis02.azurecr.io/mopd-chat
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      imagePullSecrets:
        - name: acr-secret
